<resources>
    <string name="app_name">MultiPOS</string>
    <string name="sign_up">Sign Up</string>
    <string name="general">General</string>
    <string name="information">Information</string>
    <string name="confirm">Confirm</string>
    <string name="secure_data_exchange">SECURE DATA EXCHANGE</string>
    <string name="data_encryption">DATA ENCRYPTION</string>
    <string name="uncompromising">uncompromising</string>
    <string name="tough_and_secure">tough and secure</string>
    <string name="user_authorisation">USER AUTHORISATION</string>
    <string name="login_to_access_data">login to access data</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="password_dont_match">Password don`t match</string>
    <string name="password_length">Password length should be 6 digits</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="sex">Sex</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="add_photo">Add Photo</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirmation">Confirmation</string>
    <string name="login_with_socials">Login With Socials</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="company">Company</string>
    <string name="dashboard">Dashboard</string>
    <string name="establishment">Establishment</string>
    <string name="entities">Entities</string>
    <string name="managements">Managements</string>
    <string name="inventory">Inventory</string>
    <string name="crm">CRM</string>
    <string name="hrm">HRM</string>
    <string name="reports">Reports</string>
    <string name="select_company">Select Company</string>
    <string name="edit_company">Edit Company</string>
    <string name="add_company_photo">Add Company Photo</string>
    <string name="company_name">Company Name</string>
    <string name="company_id">Company ID</string>
    <string name="address">Address</string>
    <string name="ipcode">IPCODE</string>
    <string name="is_active">Active</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="pos">POS</string>
    <string name="orders">Orders</string>
    <string name="edit_establishment">Edit Establishment</string>
    <string name="edit_pos">Edit POS</string>
    <string name="products">Products</string>
    <string name="product_class">Product Class</string>
    <string name="discount">Discount</string>
    <string name="service_fee">Service Fee</string>
    <string name="unit">Unit</string>
    <string name="product_category">Product Category</string>
    <string name="import_">Import</string>
    <string name="export">Export</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_photo">Add Product Photo</string>
    <string name="name">Name</string>
    <string name="barcode">Barcode</string>
    <string name="sku">SKU</string>
    <string name="warehouse">Warehouse</string>
    <string name="business_occupation">Business Occupation</string>
    <string name="add_establishment">Add Establishment</string>
    <string name="warehouses">Warehouses</string>
    <string name="main_warehouse">Main Warehouse</string>
    <string name="product_class_list_is_empty">Product Class list is empty</string>
    <string name="the_list_is_empty">The list is empty!</string>
    <string name="add_product_class_nl">Add \n Product Class</string>
    <string name="add_product_class">Add Product Class</string>

    <string name="refreshing">Refreshing</string>
    <string name="refresh_done">Refresh Done</string>
    <string name="release">Release to refresh</string>
    <string name="loading">Loading…</string>

    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="select_to_view_info">Select %1$s to view information</string>

    <string name="name_required">Name*</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="product_class_name_error">Product Class name can\'t be empty!</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="are_u_sure">Are you sure you want to delete this?\n You can`t undo this action</string>
    <string name="company_photo">Company Photo</string>
    <string name="company_name_required">Company Name*</string>
    <string name="business_occupation_required">Business occupation*</string>
    <string name="contact_data">Contact Data</string>
    <string name="address_type">Address Type</string>
    <string name="street_address_1_required">Street Address 1*</string>
    <string name="street_address_2">Street Address 2</string>
    <string name="country_required">Country*</string>
    <string name="city_required">City*</string>
    <string name="state">State</string>
    <string name="post_code">Post Code</string>
    <string name="photo">Photo</string>
    <string name="first_name_required">First Name*</string>
    <string name="last_name_required">Last Name*</string>
    <string name="position_required">Position*</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="nationality">Nationality</string>
    <string name="language">Language</string>
    <string name="phones">Phones</string>
    <string name="phones_with_two_dots">Phones:</string>
    <string name="email_required">Email*</string>
    <string name="mobile">Mobile</string>
    <string name="personal">Personal</string>
    <string name="birth_date">Birth Date</string>
    <string name="requisite">Requisite</string>
    <string name="requisite_name_required">Requisite Name*</string>
    <string name="item_name">Item name</string>
    <string name="item_value">Item value</string>
    <string name="about">About</string>
    <string name="set_to_main">SET TO MAIN</string>
    <string name="position">Position</string>
    <string name="office_phone">Office Phone</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="personal_phone">Personal phone</string>
    <string name="items">Items</string>
    <string name="requisite_name">Requisite name</string>
    <string name="snn">SNN</string>
    <string name="bank_account">Bank Account</string>
    <string name="add_company">Add Company</string>
    <string name="select_company_to_view_information">Select Company to view information</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallery">From Gallery</string>
    <string name="office">Office</string>
    <string name="home">Home</string>
    <string name="select_your_country">Select your country</string>
    <string name="select_city">Select city</string>
    <string name="select_your_country_first">Select your country first</string>
    <string name="no_information_yet">No information yet</string>
    <string name="office_required">Office*</string>
    <string name="add_edit_contact_person">Add/Edit Contact Person</string>

    <string-array name="company_add_edit_items">
        <item>About</item>
        <item>Address</item>
        <item>Contact Person</item>
        <item>Bank Requisites</item>
    </string-array>

    <string-array name="company_show_items">
        <item>Company</item>
        <item>Contact Person</item>
        <item>Bank Requisites</item>
    </string-array>

</resources>
