<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.jim.multipos.ui.adminsignup.AdminSignUpViewModel"/>
    </data>

    <LinearLayout
        android:id="@+id/generalSection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fifteen_dp">

        <com.jim.multipos.custom.MpEditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ten_dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <com.jim.multipos.custom.MpEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ten_dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <com.jim.multipos.custom.MpEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fifteen_dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/lorem_ipsum"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backBtn"
                android:layout_width="153dp"
                android:layout_height="35dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/ten_dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/admin_reg_button_back"
                android:text="@string/back" />

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="153dp"
                android:layout_height="35dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/ten_dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/admin_reg_next_button"
                android:text="@string/next" />

        </LinearLayout>
    </LinearLayout>

</layout>