<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.jim.multipos.environment.admin.ui.signup.SignUpViewModel"/>
    </data>
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fifteen_dp">

        <com.jim.multipos.customView.MpEditText
            android:id="@+id/etConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmation"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginBottom="@dimen/ten_dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/colorGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backBtn"
                android:layout_width="153dp"
                android:layout_height="35dp"
                android:background="@drawable/admin_reg_button_back"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/ten_dp"
                android:text="@string/back"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="153dp"
                android:layout_height="35dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/ten_dp"
                android:background="@drawable/admin_reg_next_button"
                android:text="@string/next"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </LinearLayout>
</layout>