<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAddEditBg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:text="@string/add_product_class"
        android:textColor="@color/colorTitle"
        android:textStyle="bold"
        android:textSize="@dimen/seventeen_dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginStart="@dimen/twenty_dp"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/sixteen_dp"
            android:layout_weight="0.4"
            />

        <com.jim.multipos.customView.MpEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/is_active"
            android:layout_marginStart="@dimen/twenty_dp"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/sixteen_dp"
            android:layout_weight="1" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginStart="@dimen/twenty_dp"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/sixteen_dp"
            android:layout_weight="0.4"
            />

        <com.jim.multipos.customView.MpEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:minLines="4"
            />

    </LinearLayout>


</LinearLayout>